поменял "доб, задачу" на "+", добавил зачеркивание

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form class="todo__form" action="#" method="post">
             <div class="todo__enter">
                 <input class="todo__input" type="text" name="task" id="task-1">
-                <button class="todo__btn todo__btn_add">Добавить задачу</button>
+                <button class="todo__btn todo__btn_add">&#10010;</button>
             </div>
             <ul class="todo__list">
             </ul>
